Closed
Bug 227178
Opened 22 years ago
Closed 22 years ago
Checking folders other than inbox doesn't fire new mail notification and new mail notification fires again when an IMAP folder is opened
Categories
(MailNews Core :: Networking: IMAP, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: emaijala+moz, Assigned: Bienvenu)
Details
(Keywords: fixed1.6)
Attachments
(1 file)
|
856 bytes,
patch
|
mscott
:
superreview+
|
Details | Diff | Splinter Review |
Now that STATUS is used to check the new mail count it seems that the headers
downloaded when a folder (not inbox) is opened are considered new and the new
mail notification sound is played and the tray icon shown again. It could be
that it happens only if the folder wasn't in selected state already.
| Assignee | ||
Comment 1•22 years ago
|
||
I'm not able to reproduce this but I have a fix in my tree (that I just checked
in) that might also fix this. Can you try the 1.6b build that we're supposed to
put out tonight?
| Reporter | ||
Comment 2•22 years ago
|
||
Is it in trunk too? At least 2003120508 shows the symptom. I'll try if I can
find out what's happening.
| Assignee | ||
Comment 3•22 years ago
|
||
I didn't check the fix in until 10AM Friday (my time), so the trunk build you
mention wouldn't have my fix. I did check it into the trunk. As far as I know,
we haven't branched yet. So if you could try a newer build and let me know, that
would be great, thx!
| Reporter | ||
Comment 4•22 years ago
|
||
The problem still exists. One folder showed 5 new messages when the actual count
was 2, another showed one new, but there were none. Third one said 5, but the
actual number was 1. I have a feeling it somehow confuses the previous and later
new mail counts.
| Assignee | ||
Comment 5•22 years ago
|
||
Had you opened the folders in the current session? I'm only using the unseen
counts, + the pending unread. Do you have client-side filters that also move
messages into the folders in question?
| Reporter | ||
Comment 6•22 years ago
|
||
Yes, I'm using only client-side filters. Anyway, I took a protocol log and it
seems it's the server at fault (UW-IMAPD 2001.315rh). It's reporting for example
* STATUS Mail/SPAM (MESSAGES 524 RECENT 0 UNSEEN 4 UIDNEXT 16271) although there
was only one unseen. I'll close this bug. Sorry for the disturbance.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → INVALID
| Assignee | ||
Comment 7•22 years ago
|
||
actually, this bug is real, even if your server is behaving oddly. Re-opening,
with a patch upcoming. Changing subject to incorporate the other problem - that
the STATUS command doesn't cause new mail notification to fire.
Status: RESOLVED → REOPENED
Resolution: INVALID → ---
Summary: New mail notification fires again when an IMAP folder is opened → Checking folders other than inbox doesn't fire new mail notification and new mail notification fires again when an IMAP folder is opened
| Assignee | ||
Comment 8•22 years ago
|
||
clearing the performingbiff flag on the folder when status is done makes it so
we don't fire the new mail notification again when you open the folder. Setting
the num new messages and biff state on the folder makes the new mail
notification fire. I'm still looking into some weirdness so there might be a
new patch upcoming.
| Assignee | ||
Comment 9•22 years ago
|
||
Comment on attachment 137659 [details] [diff] [review]
proposed fix
OK, this patch seems to be working. The weirdness I saw earlier was because of
some js changes I'd made and then undone, but w/o rebuilding chrome.
Attachment #137659 -
Flags: superreview?(mscott)
Updated•22 years ago
|
Attachment #137659 -
Flags: superreview?(mscott) → superreview+
Comment 10•22 years ago
|
||
i put this on the m4 branch David.
| Assignee | ||
Comment 11•22 years ago
|
||
fixed on trunk. I think this will be a highly visible problem in 1.6 final so
nominating for blocking. We're going to try to get some testing with new
thunderbird builds, and trunk builds.
Status: REOPENED → RESOLVED
Closed: 22 years ago → 22 years ago
Flags: blocking1.6?
Resolution: --- → FIXED
clearing blocking1.6 nomination since this was fixed on the 1.6 branch
Flags: blocking1.6?
Updated•21 years ago
|
Product: MailNews → Core
Updated•17 years ago
|
Product: Core → MailNews Core
You need to log in
before you can comment on or make changes to this bug.
Description
•