take david's fix for Bug #227178

Checking folders other than inbox doesn't fire new mail notification and new mail notification fires again when an IMAP folder is opened