mozilla/mailnews/imap/src/nsImapMailFolder.cpp
@@ -2510,9 +2510,14 @@ NS_IMETHODIMP nsImapMailFolder::UpdateImapMailboxStatus(
     ChangeNumPendingUnread(numUnread - previousUnreadMessages);
     ChangeNumPendingTotalMessages(numUnread - previousUnreadMessages);
     if (numUnread > previousUnreadMessages)
+    {
       SetHasNewMessages(PR_TRUE);
+      SetNumNewMessages(numUnread - previousUnreadMessages);
+      SetBiffState(nsMsgBiffState_NewMail);
+    }
     SummaryChanged();
   }
+  SetPerformingBiff(PR_FALSE);
   m_numStatusUnseenMessages = numUnread;
   return NS_OK;
 }
